fix (declare-font-face) : wrong font weight with local font on mac

--- a/src/scss/02-tools/_m-declare-font-face.scss
+++ b/src/scss/02-tools/_m-declare-font-face.scss
@@ -11,9 +11,7 @@
         font-style: $font-style;
         font-weight: $font-weight;
         font-stretch: $font-stretch;
-        src:
-            local("#{$font-family}"), /* search for the locally installed font first */
-            url(#{$font-filename}.woff2) format("woff2");
+        src: url(#{$font-filename}.woff2) format("woff2");
         font-display: swap;
         unicode-range: U+0-10FFFF; /* cutting of the font file for better loading */
     }
